--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 npsizes.csv filter=lfs diff=lfs merge=lfs -text
 npwordschars.csv filter=lfs diff=lfs merge=lfs -text
-app/app.RData text !filter !merge !diff
+app/app.RData filter=lfs diff=lfs merge=lfs -text
 npcolumns.csv filter=lfs diff=lfs merge=lfs -text
+app/app.RData text !filter !merge !diff
