--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 npsizes.csv filter=lfs diff=lfs merge=lfs -text
 npwordschars.csv filter=lfs diff=lfs merge=lfs -text
-app/app.RData filter=lfs diff=lfs merge=lfs -text
 npcolumns.csv filter=lfs diff=lfs merge=lfs -text
-app/app.RData text !filter !merge !diff
+app/app.RData -diff
